Update design for authentication views

--- a/RealEstateApp.WebApp/Views/Auth/ForgotPassword.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/ForgotPassword.cshtml
@@ -1,44 +1,38 @@
-﻿
-@model RealEstateApp.Core.Application.ViewModels.User.ForgotPasswordViewModel
+﻿@model RealEstateApp.Core.Application.ViewModels.User.ForgotPasswordViewModel
 @{
-    ViewData["Title"] = "Olvide contrasenia";
+    ViewData["Title"] = "Olvidaste tu contraseña?";
 }
 
-<div class="container-fluid">
-
-    <div class="row">
-        <div class="col-6 offset-3">
-            <div class="card  bg-dark text-light">
-                <div class="card-header">
-                    <h4>Olvide mi contrasenia</h4>
-                </div>
-                <div class="card-body">
-
-                    @if (Model.HasError)
-                    {
-                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                            <p>@Model.Error</p>
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    }
-                    <form method="post" asp-controller="Auth" asp-action="ForgotPassword">
-
-                        <div class="mb-3">
-                            <label asp-for="Email" class="form-label">Correo: </label>
-                            <input asp-for="Email" class="form-control" />
-                            <span asp-validation-for="Email" class="text-danger"></span>
-                        </div>
-
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a asp-controller="Auth" asp-action="Index" class="btn btn-warning">Volver atras</a>
-
-                    </form>
-
-                </div>
-
-            </div>
+<div class="container mt-5 w-25">
+    <div class="card border rounded-3 shadow mt-3">
+        <div class="card-header bg-dark text-light">
+            <h4>Olvidaste tu contraseña?</h4>
         </div>
-    </div>
+        <div class="card-body">
+            @if (Model.HasError)
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <p>@Model.Error</p>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+            }
+            <form method="post" asp-controller="Auth" asp-action="ForgotPassword">
 
+                <div class="mb-3">
+                    <label asp-for="Email" class="form-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+
+                <button type="submit" class="btn btn-primary">Guardar</button>
+                <a asp-controller="Auth" asp-action="Index" class="btn btn-secondary">Volver atras</a>
+
+            </form>
+
+        </div>
+
+    </div>
 </div>
+</div>
+
 
