--- a/RealEstateApp.WebApp/Views/Home/Agents.cshtml
+++ b/RealEstateApp.WebApp/Views/Home/Agents.cshtml
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
 	<div class="row m-3">
-		<form class="d-flex" asp-controller="Home" asp-action="Index">
+		<form class="d-flex" asp-controller="Home" asp-action="Agents">
 			<input name="SearchString" type="search" placeholder="Buscar por nombre" class="form-control h-100">
 			<button type="submit" class="btn btn-dark btn-sm">Search</button>
 		</form>
