Auth Styles and Fixing Agents

--- a/RealEstateApp.WebApp/Views/Auth/ForgotPassword.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/ForgotPassword.cshtml
@@ -7,10 +7,10 @@
 <div class="container-fluid">
 
     <div class="row">
-        <div class="col-6 offset-3">
-            <div class="card  bg-dark text-light">
+        <div class="col-6 mt-5 offset-3">
+            <div class="card  border rounded-3 shadow">
                 <div class="card-header">
-                    <h4>Olvide mi contrasenia</h4>
+                    <h4 class="mt-2"> Olvide mi contrasena</h4>
                 </div>
                 <div class="card-body">
 
@@ -28,10 +28,13 @@
                             <input asp-for="Email" class="form-control" />
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
+                        
+                        <div class="float-end mt-3 btn-group">
 
-                        <button type="submit" class="btn btn-primary">Guardar</button>
-                        <a asp-controller="Auth" asp-action="Index" class="btn btn-warning">Volver atras</a>
+                            <a asp-controller="Auth" asp-action="Index" class="btn btn-outline-danger">Volver atras</a>
+                            <button type="submit" class="btn btn-outline-dark">Guardar</button>
 
+                        </div>
                     </form>
 
                 </div>
