--- a/RealEstateApp.WebApp/Views/Home/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 <div class="container-fluid">
 	<div class="row m-3">
 		<form class="d-flex" asp-controller="Home" asp-action="Index">
-			<input name="SearchString" type="search" placeholder="Buscar por codigo de propiedad" class="form-control h-100">
-			<button type="submit" class="btn btn-dark btn-sm">Search</button>
+			<input name="SearchString" type="search" placeholder="Buscar por codigo de propiedad" class="form-control">
+			<button type="submit" class="btn btn-dark btn-sm">Buscar</button>
 		</form>
 	</div>
 
