--- a/RealEstateApp.WebApp/Views/Auth/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/Index.cshtml
@@ -5,36 +5,39 @@
 
 <div class="row mt-5">
     <div class="col-6 offset-3">
-        <div class="card-body bg-dark text-white rounded border-0">
-                @Html.ValidationSummary(false, "", new { @class="text-danger"})
-                @if (Model.HasError)
-                {
-                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <p>@Model.Error</p>
-                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                    </div>
-                }
-
-                <form method="post" asp-controller="Auth" asp-action="Index" class="m-3">
-
-                    <div class="mb-3">
-                        <label asp-for="EmailOrUserName" class="form-label">Correo del usuario</label>
-                        <input class="form-control" asp-for="EmailOrUserName">
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="Password" class="form-label">Contraseña</label>
-                        <input class="form-control" asp-for="Password">
-                    </div>
-
-                    <button type="submit" class="btn btn-outline-light float-end">Iniciar sesión</button>
-                    <div class="d-grid">
-
-                    <a asp-controller="Auth" asp-action="ForgotPassword" class="m-2 text-light">Olvidate tu contrasena?</a>
-                    <a asp-controller="Auth" asp-action="Register" class="m-2 text-light" >Registrar</a>
-
-                    </div>
-                </form>
+        <div class="card border rounded-3 shadow">
+            <div class="card-header fw-bold">
+                <h3 class="mt-2">Iniciar sesion</h3>
             </div>
-        </div>
+            <div class="card-body">
+                    @Html.ValidationSummary(false, "", new { @class="text-danger"})
+                    @if (Model.HasError)
+                    {
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <p>@Model.Error</p>
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                    }
+
+                    <form method="post" asp-controller="Auth" asp-action="Index" class="m-3">
+
+                        <div class="mb-3">
+                            <label asp-for="EmailOrUserName" class="form-label">Correo del usuario o Nombre de usuario</label>
+                            <input class="form-control" asp-for="EmailOrUserName">
+                        </div>
+                        <div class="mb-3">
+                            <label asp-for="Password" class="form-label">Contraseña</label>
+                        <input  class="form-control" asp-for="Password">
+                        </div>
+
+                        <div class="d-grid">
+                            <a asp-controller="Auth" asp-action="ForgotPassword" class="m-2 text-primary">Olvidaste tu contrasena?</a>
+                            <a asp-controller="Auth" asp-action="Register" class="m-2 text-primary" >Registrarse</a>
+                            <button type="submit" class="btn mt-2 btn-outline-dark">Iniciar sesión</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+    </div>
     </div>
 </div>
