--- a/RealEstateApp.WebApp/Views/Auth/Register.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/Register.cshtml
@@ -5,8 +5,8 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-6 offset-3">
-            <div class="card bg-dark text-white rounded border-0">
+        <div class="col-6 offset-3 mt-5">
+            <div class="card border rounded-3 shadow">
                 <div class="card-header ">
                     <h2 class="text-center card-title m-2">Registro</h2>
                 </div>
@@ -18,58 +18,72 @@
                             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                         </div>
                     }
-                    <form method="post"  class="lead fw-bold" asp-controller="Auth" asp-action="Register" enctype="multipart/form-data">
-                        <div class="mb-3">
-                            <label asp-for="FirstName" >Nombre: </label>
-                            <input asp-for="FirstName" placeholder="Ingrese su nombre" class="form-control" />
-                            <span asp-validation-for="FirstName" class="text-danger"></span>
-                        </div>
-                        <div class="mb-3">
-                            <label asp-for="LastName" >Apellido: </label>
-                            <input asp-for="LastName" placeholder="Ingrese su apellido" class="form-control" />
-                            <span asp-validation-for="LastName" class="text-danger"></span>
+                    <form method="post" class="form-label" asp-controller="Auth" asp-action="Register" enctype="multipart/form-data">
+                        
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label  asp-for="FirstName" >Nombre: </label>
+                                    <input asp-for="FirstName" class="form-control" />
+                                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label asp-for="LastName" >Apellido: </label>
+                                    <input asp-for="LastName" class="form-control" />
+                                    <span asp-validation-for="LastName" class="text-danger"></span>
+                                </div>
+                            </div>
                         </div>
 
                         <div class="mb-3">
                             <label asp-for="Username" >Nombre de usuario: </label>
-                            <input asp-for="Username" placeholder="Ingrese su nombre de usuario" class="form-control" />
+                            <input asp-for="Username" class="form-control" />
                             <span asp-validation-for="Username" class="text-danger"></span>
                         </div>
 
-                        <div class="mb-3">
-                            <label asp-for="Password" >Contraseña: </label>
-                            <input asp-for="Password" placeholder="Ingrese su contrasena" class="form-control" />
-                            <span asp-validation-for="Password" class="text-danger"></span>
-                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                <label asp-for="Password" >Contraseña: </label>
+                                <input asp-for="Password"  class="form-control" />
+                                <span asp-validation-for="Password" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="mb-3">
+                                    <label asp-for="ConfirmPassword" >Confirmar contraseña: </label>
+                                    <input asp-for="ConfirmPassword"  class="form-control" />
+                                    <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                                </div>
+                            </div>
 
-                        <div class="mb-3">
-                            <label asp-for="ConfirmPassword" >Confirmar contraseña: </label>
-                            <input asp-for="ConfirmPassword" placeholder="Confirme su contrasena" class="form-control" />
-                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+
                         </div>
 
                         <div class="mb-3">
                             <label asp-for="Phone" >Telefono: </label>
-                            <input asp-for="Phone" placeholder="Ingrese su numero telefonico" class="form-control" />
+                            <input asp-for="Phone" class="form-control" />
                             <span asp-validation-for="Phone" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
                             <label asp-for="Email" >Correo: </label>
-                            <input asp-for="Email" placeholder="Ingrese su correo electronico" class="form-control" />
+                            <input asp-for="Email" class="form-control" />
                             <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
 
                         <div class="mb-3">
                             <label asp-for="Photo" >Foto: </label>
-                            <input asp-for="Photo" placeholder="Seleccione su foto de perfil" class="form-control" />
+                            <input asp-for="Photo" class="form-control" />
                             <span asp-validation-for="Photo" class="text-danger"></span>
                         </div>
 
 
                         <div class="mb-3">
                             <label asp-for="UserType" >Tipo de Usuario: </label>
-                            <select asp-for="UserType" placeholder="Seleccione que tipo de usuario quiere ser" class="form-control">
+                            <select asp-for="UserType" class="form-control">
                                 <option value="@RealEstateApp.Core.Application.Enums.Roles.Agent.ToString()">Agente</option>
                                 <option value="@RealEstateApp.Core.Application.Enums.Roles.Client.ToString()">Cliente</option>
                             </select>
@@ -77,8 +91,8 @@
                         </div>
 
                         <div class="btn-group float-end">
-                            <a asp-controller="Auth" asp-action="Index" class="btn btn-outline-warning">Volver atras</a>
-                            <button type="submit" class="btn btn-outline-light">Registrarse</button>
+                            <a asp-controller="Auth" asp-action="Index" class="btn btn-outline-danger">Volver atras</a>
+                            <button type="submit" class="btn btn-outline-dark">Registrarse</button>
 
                         </div>
                     </form>
