--- a/RealEstateApp.WebApp/Views/Client/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Client/Index.cshtml
@@ -67,7 +67,7 @@
                     {
                         <div class="col-4 mt-3">
                             <a class="text-decoration-none text-dark" asp-controller="Home" asp-action="Details" asp-route-id="@propiedad.Id">
-                                <div class="card p-0" style="width: 20rem;">
+                            <div class="card p-0 shadow" style="width: 20rem;">
                                     <img class="card-img-top p-0" src="@propiedad.ImagesUrl.FirstOrDefault()" alt="Luxury Villa">
                                     <span class="badge bg-primary position-absolute top-0 end-0 m-2">Cod. @propiedad.Code</span>
                                     <div class="card-body p-4">
