--- a/RealEstateApp.WebApp/Views/Shared/_LinksLogin.cshtml
+++ b/RealEstateApp.WebApp/Views/Shared/_LinksLogin.cshtml
@@ -6,6 +6,7 @@
         <span class="text-muted small me-2 pt-2">Bienvenido, @Model.UserName</span>
         <a class="nav-link mx-2 float-end" asp-area="" asp-controller="Auth" asp-action="LogOut">
             <i class="fa-solid fa-right-from-bracket"></i>
+            <span>Cerrar Sesion</span>
         </a>
     @*         <div class="row align-items-center">
             <div class="col-auto">
