boton editar y eliminar

--- a/RealEstateApp.WebApp/Views/Property/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Property/Index.cshtml
@@ -61,6 +61,17 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="row m-3">
+                                    <div class="col-lg-3 col-md-6 col-sm-12">
+                                        <a class="btn btn-dark" asp-controller="Property" asp-action="Edit" asp-route-id="@propiedad.Id">Editar</a>
+                                    </div>
+                                    <div class="col-lg-3 col-md-6 col-sm-12">
+                                        <a class="btn btn-dark" asp-controller="Property" asp-action="Delete" asp-route-id="@propiedad.Id">Eliminar</a>
+                                    </div>
+                                </div>
+
+                                    
                             </div>
                         </a>
                     </div>
