Implemented admin layout for admin functionality views

--- a/RealEstateApp.WebApp/Views/Improvement/SaveImprovement.cshtml
+++ b/RealEstateApp.WebApp/Views/Improvement/SaveImprovement.cshtml
@@ -2,6 +2,7 @@
 @model SaveImprovementViewModel
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Guardar mejora";
     bool editMode = Model.Id == 0 ? false : true;
 }
