--- a/RealEstateApp.WebApp/Views/PropertyType/Delete.cshtml
+++ b/RealEstateApp.WebApp/Views/PropertyType/Delete.cshtml
@@ -1,5 +1,6 @@
 ﻿@model RealEstateApp.Core.Application.ViewModels.PropertyType.SavePropertyTypeViewModel
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Eliminar tipo de propiedad";
 }
 
