--- a/RealEstateApp.WebApp/Views/User/AdminManagement.cshtml
+++ b/RealEstateApp.WebApp/Views/User/AdminManagement.cshtml
@@ -2,6 +2,7 @@
 @model List<UserViewModel>
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Listado de admins";
 }
 
