--- a/RealEstateApp.WebApp/Views/User/AgentManagement.cshtml
+++ b/RealEstateApp.WebApp/Views/User/AgentManagement.cshtml
@@ -3,6 +3,7 @@
 @model List<AgentViewModel>
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Listado de agentes";
 }
 
