--- a/RealEstateApp.WebApp/Views/User/Delete.cshtml
+++ b/RealEstateApp.WebApp/Views/User/Delete.cshtml
@@ -1,5 +1,6 @@
 ﻿@model RealEstateApp.Core.Application.Dtos.Account.UserResponse
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Eliminar agente";
 }
 
