--- a/RealEstateApp.WebApp/Views/Improvement/Delete.cshtml
+++ b/RealEstateApp.WebApp/Views/Improvement/Delete.cshtml
@@ -1,5 +1,6 @@
 ﻿@model RealEstateApp.Core.Application.ViewModels.Improvement.SaveImprovementViewModel
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Eliminar Mejora";
 }
 
