--- a/RealEstateApp.WebApp/Views/Improvement/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Improvement/Index.cshtml
@@ -2,6 +2,7 @@
 @model List<ImprovementViewModel>
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Listado de Mejoras";
 }
 
