--- a/RealEstateApp.WebApp/Views/PropertyType/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/PropertyType/Index.cshtml
@@ -2,6 +2,7 @@
 @model List<PropertyTypeViewModel>
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Tipos de propiedades";
 }
 
