--- a/RealEstateApp.WebApp/Views/PropertyType/SavePropertyType.cshtml
+++ b/RealEstateApp.WebApp/Views/PropertyType/SavePropertyType.cshtml
@@ -2,6 +2,7 @@
 @model SavePropertyTypeViewModel
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Guardar tipo de propiedad";
     bool editMode = Model.Id == 0 ? false : true;
 }
