--- a/RealEstateApp.WebApp/Views/SaleType/Delete.cshtml
+++ b/RealEstateApp.WebApp/Views/SaleType/Delete.cshtml
@@ -1,5 +1,6 @@
 ﻿@model RealEstateApp.Core.Application.ViewModels.SaleType.SaveSaleTypeViewModel
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Eliminar tipo de venta";
 }
 
