--- a/RealEstateApp.WebApp/Views/SaleType/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/SaleType/Index.cshtml
@@ -2,6 +2,7 @@
 @model List<SaleTypeViewModel>
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Tipos de ventas";
 }
 
