--- a/RealEstateApp.WebApp/Views/SaleType/SaveSaleType.cshtml
+++ b/RealEstateApp.WebApp/Views/SaleType/SaveSaleType.cshtml
@@ -2,6 +2,7 @@
 @model SaveSaleTypeViewModel
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Guardar tipo de venta";
     bool editMode = Model.Id == 0 ? false : true;
 }
