--- a/RealEstateApp.WebApp/Views/User/SaveAdmin.cshtml
+++ b/RealEstateApp.WebApp/Views/User/SaveAdmin.cshtml
@@ -3,6 +3,7 @@
 @model SaveUserAdminViewModel
 
 @{
+    Layout = "~/Views/Shared/_AdminLayout.cshtml";
     ViewData["Title"] = "Registrar administrador";
     bool editMode = Model.Id == null ? false : true;
 
