Fixing PropertyType edit

--- a/RealEstateApp.WebApp/Views/Property/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Property/Index.cshtml
@@ -12,7 +12,7 @@
 
                 <div class="bg-dark w-100 my-2 p-4 rounded shadow  text-end">
 
-                    <a asp-action="Create" asp-controller="Property" class="lead text-light text-decoration-none ">Desea Registrar una propiedad?</a>
+                    <a asp-action="Create" asp-controller="Property" class="lead text-light text-decoration-none ">Desea Registrar una propiedad? <i class=" fa-solid fa-arrow-up-right-from-square"> </i></a>
                 </div>
 
 		    </div>
