--- a/RealEstateApp.WebApp/Views/Improvement/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/Improvement/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Listado de Mejoras";
 }
 
-<div class="container">
+<div class="container mt-5">
     <h1 class="">Listado de Mejoras</h1>
     <a asp-controller="Improvement" asp-action="Create" class="btn btn-primary m-3">
         <i class="bi bi-plus-circle-fill"></i>
