--- a/RealEstateApp.WebApp/Views/PropertyType/Index.cshtml
+++ b/RealEstateApp.WebApp/Views/PropertyType/Index.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Tipos de propiedades";
 }
 
-<div class="container">
+<div class="container mt-5">
     <h1 class="">Tipos de propiedades</h1>
     <a asp-controller="PropertyType" asp-action="Create" class="btn btn-primary m-3">
         <i class="bi bi-plus-circle-fill"></i>
