--- a/RealEstateApp.WebApp/Views/User/AdminManagement.cshtml
+++ b/RealEstateApp.WebApp/Views/User/AdminManagement.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Listado de admins";
 }
 
-<div class="container">
+<div class="container mt-5">
     <h1 class="">Listado de Administradores</h1>
     <a asp-controller="User" asp-action="CreateAdmin" class="btn btn-primary m-3">
         <i class="bi bi-plus-circle-fill"></i>
