--- a/RealEstateApp.WebApp/Views/User/AgentManagement.cshtml
+++ b/RealEstateApp.WebApp/Views/User/AgentManagement.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Listado de agentes";
 }
 
-<div class="container">
+<div class="container mt-5">
     <h1 class="">Listado de agentes</h1>
     <div class="border rounded-3 shadow bg-white p-4 mt-4">
         <table class="table table-hover">
