--- a/RealEstateApp.WebApp/Views/User/DevManagement.cshtml
+++ b/RealEstateApp.WebApp/Views/User/DevManagement.cshtml
@@ -6,7 +6,7 @@
     ViewData["Title"] = "Listado de desarrolladores";
 }
 
-<div class="container">
+<div class="container mt-5">
     <h1 class="">Listado de Desarrolladores</h1>
     <a asp-controller="User" asp-action="CreateDev" class="btn btn-primary m-3">
         <i class="bi bi-plus-circle-fill"></i>
