Fix redirection on the home and access denied page

--- a/RealEstateApp.WebApp/Views/Auth/AccessDenied.cshtml
+++ b/RealEstateApp.WebApp/Views/Auth/AccessDenied.cshtml
@@ -1,19 +1,21 @@
-﻿
-@model string
+﻿@model string
 @{
-    ViewData["Title"] = "access denied";
+    ViewData["Title"] = "Acceso denegado";
 }
 
-<div class="row mt-5">
-    <div class="col-6 offset-3">
-        <div class="card shadow-sm">
-            <div class="card-body">
-
-                <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                    <h2>No tiene permiso para acceder a esta seccion - <a class="btn btn-warning" asp-controller="Home" asp-action="Index"> Home</a></h2>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow">
+                <div class="card-body">
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                        <h2 class="alert-heading mb-4">No tiene permiso para acceder a esta sección</h2>
+                        <p>
+                            Lo sentimos, parece que no tiene permiso para acceder a esta sección. Por favor, vuelva al
+                            <a class="alert-link" asp-controller="Home" asp-action="Index">inicio</a>.
+                        </p>
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
